k3d-victoriametrics/victoriametrics/vmalerts/ingress-vmalert-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: vmalert-dev
  namespace: monitor-system
spec:
  rules:
  - host: vmalert.example.com
    http:
      paths:
      - backend:
          service:
            name: vmalert-dev
            port:
              number: 8080
        path: /
        pathType: Prefix
